Bug 1916683 - [devtools] Adapt angle swatch to High Contrast Mode. r=devtools-reviewers,jdescottes.
We also adjust the outline so it doesn't look to weird on low-dpi screens.

Differential Revision: https://phabricator.services.mozilla.com/D230646

--- a/devtools/client/themes/inspector-swatches.css
+++ b/devtools/client/themes/inspector-swatches.css
@@ -160,6 +160,9 @@
 
 .inspector-angleswatch {
   background-image: url("chrome://devtools/skin/images/angle-swatch.svg");
+  -moz-context-properties: stroke, fill;
+  fill: #fff;
+  stroke: #aeb0b1;
 }
 
 .inspector-lineareasingswatch {
@@ -172,10 +175,15 @@
 :root[forced-colors-active] :is(
   .inspector-bezierswatch,
   .inspector-lineareasingswatch,
-  .inspector-filterswatch
+  .inspector-filterswatch,
+  .inspector-angleswatch
 ) {
   fill: ButtonFace;
   stroke: var(--theme-icon-color);
+  /* For some icons, the outline can conflate with the background image in a weird way
+     on low-dpi screens. Adjust the offset a bit so there's a clear separation between
+     the icon and the outline for a cleaner look */
+  outline-offset: 1px;
 
   &:hover {
     stroke: var(--theme-icon-hover-color);
